Now, Right Clicking the run button launches the project without build